[project]
name = "acekit"
version = "0.1.0"
description = "Generic ACE-style self-learning framework for Python agents"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

authors = [
{ name = "Anthony", email = "you@example.com" }
]

dependencies = [
"pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
openai = [
"openai>=1.0.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
